# particle-methods

./: .gitignore  README.md
final_project/proposal/: main.tex
final_project/proposal/biblio/: references.bib
final_project/proposal/sections/: prop01.tex
forest_fire_model/: README.md  environment.yml  pyproject.toml  run_scenarios.sh
forest_fire_model/documents/presentation/: .latexmkrc  main.tex
forest_fire_model/documents/presentation/slides/: template.tex
forest_fire_model/documents/proposal/proposal/: .latexmkrc
forest_fire_model/documents/proposal/proposal/sections/: prop01.tex
forest_fire_model/documents/report/: main.tex
forest_fire_model/documents/report/proposal/sections/: prop03.tex
forest_fire_model/documents/report/sections/: conclusion.tex  intro.tex  methodology.tex  results.tex
forest_fire_model/proposal/proposal/biblio/: references.bib
forest_fire_model/proposal/proposal/sections/: prop02.tex
forest_fire_model/src/forest_fire_model/: analyze_sim.py  env_vis.py  main.py  maps.py  model.py  particles.py  vis.py
habitat/: CMakeLists.txt
habitat/.cache/clangd/index/: agents.h.77ED6814490115F4.idx  grid.h.141591007D65F8C2.idx  main.cc.8ED04236D1366F02.idx  sim.h.858EAED506EB2BFD.idx
habitat/cpp/: compile_commands.json
habitat/cpp/include/: agents.h  grid.h  predator.h  sim.h  util.h
habitat/cpp/src/: agents.cc  grid.cc  main.cc  predator.cc
habitat/include/: agents.h  grid.h  predator.h  prey.h
habitat/python/predator_prey/: README.md  pyproject.toml
habitat/python/predator_prey/src/predator_prey/: agents.py  grid.py  main.py  sim.py
habitat/report/: .latexmkrc  main.tex
habitat/report/sections/: ex01.tex  ex02.tex  ex03.tex
habitat/src/: agents.cc  grid.cc  main.cc  predator.cc  prey.cc  sim.cc
ising_model/: CMakeLists.txt  README.md  compile_commands.json
ising_model/.cache/clangd/index/: CMakeCCompilerId.c.EA00080BFF6B940C.idx  ising.cc.16266DC5492B9899.idx  ising.hpp.E028B9E5CD8E8423.idx  lattice.cc.7552F79D4F0A31BB.idx  lattice.hpp.A9C6CF763F699490.idx  main.cc.E5C6E51D4613E5BE.idx
ising_model/include/: ising.hpp  lattice.hpp  util.hpp
ising_model/report/: .latexmkrc  main.tex
ising_model/report/sections/: part1.tex  part2.tex  part3.tex
ising_model/src/: ising.cc  lattice.cc  main.cc
molecular-dynamics/: CMakeLists.txt  README.md  pyproject.toml
molecular-dynamics-dissipative/: README.md  pyproject.toml
molecular-dynamics-dissipative/dpd_results/couette/: velocity_profile.csv
molecular-dynamics-dissipative/dpd_results/poiseuille/: density_profile.csv
molecular-dynamics-dissipative/report/: main.tex
molecular-dynamics-dissipative/report/sections/: ex01.tex  ex02.tex  ex03.tex
molecular-dynamics-dissipative/src/molecular_dynamics/: cell_list.py  forces.py  main.py  simulation.py  visualization.py
molecular-dynamics-dissipative/src/molecular_dynamics/dpd_results/couette/: velocity_profile.csv
molecular-dynamics-dissipative/src/molecular_dynamics/dpd_results/poiseuille/: density_profile.csv
molecular-dynamics-lennard-jones/: README.md  environment.yml
molecular-dynamics-lennard-jones/report/sections/: ex01.tex  ex02.tex
molecular-dynamics-lennard-jones/src/molecular_dynamics/: cell_list.py  nve_sim.py  nvt_sim.py  simulation.py
molecular-dynamics/.cache/clangd/index/: main.cc.6E65B329317973D8.idx
molecular-dynamics/include/: array_ops.h  cell_list.h  constants.h  integrator.h  particle.h  potential.h  simulation.h
molecular-dynamics/report/: main.tex
molecular-dynamics/report/sections/: ex01.tex  ex02.tex
molecular-dynamics/src/: integrator.cc  particle.cc
molecular-dynamics/src/molecular_dynamics/: cell_list.py  main.py  numba_simulation.py  nve_sim.py  nvt_sim.py  simulation.py  visualization.py
