[project]
name = "predator-prey"
version = "0.1.0"
description = ""
authors = [
    {name = "Dennys Huber",email = "dennys.huber@proton.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "black (>=25.1.0,<26.0.0)"
]

[tool.poetry]
packages = [{include = "predator_prey", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
